--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Audio Subtitles</title>
+    
+    <!-- Custom Fonts Loading -->
+    <style id="custom-fonts"></style>
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
